# obsidian-agentic-rag

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  changes.md  chroma_metadata_test.py  context.index.txt  pyproject.toml  requirements-phase2.txt  requirements.txt  setup.py  setup_project.py
.github/: README.md  copilot-instructions.md
.github/workflows/: ci.yml
config/: agents.yaml
docs/: 00-Roadmap.md  Code_Analysis_and_Refactoring_Plan.md  Phase 2 Complete Setup Guide.md  system-overview.md
examples/: complete_rag_example.py  example_usage.py  rag_example.py
prompts/: critic.txt  researcher.txt  specialist.txt  supervisor.txt  synthesizer.txt
scripts/: index_vault.py
src/: config.py
src/agents/: agent_factory.py  concrete_agent.py  rag_agent.py
src/application/: knowledge_base.py  orchestrator.py  rag_pipeline.py
src/domain/: agent_interface.py  vector_store_interface.py
src/infrastructure/: graph_navigator.py  llm_client.py  local_vector_store.py  mcp_interface.py  obsidian_mcp_client.py  ollama_embedder.py  prompt_manager.py  rt_scheduler.py  toon_converter.py  vector_rag.py
src/mcp/: obsidian_server.py
src/obsidian_agent_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_vault/: clean_architecture.md  solid_principles.md
tests/: test_basic.py  test_graph_navigator.py  test_rag_agent.py
