[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-agent-rag"
version = "0.2.0"
description = "Multi-agent RAG system for Obsidian with MCP support"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "mcp>=1.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.3.1",
    "chromadb>=0.4.22",
    "rank-bm25>=0.2.2",
    "networkx>=3.2.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "coverage",
]
performance = [
    "torch>=2.1.0",
    "faiss-cpu>=1.7.4",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
